# pyproject.toml

[build-system]
requires = ["setuptools >= 40.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdyn"
version = "0.1.0"
description = "A collection of powerful tools from Hyperdyn."
authors = ["Skandan V <skandanskandu23456@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.tox]
envlist = ["py37", "py38", "py39"]
